DEVOPS-1556: Add java.security.jpss to build time modules
DEVOPS-1556 (Switch default tycho build to java 17 )