@@ -81,6 +81,10 @@
 				<version>${tycho.version}</version>
 				<configuration>
 					<compilerArgs>
+						<arg>--module-path</arg>
+						<arg>${java.home}/jmods</arg>
+						<arg>--add-modules</arg>
+						<arg>java.security.jgss</arg>
 						<arg>--add-exports</arg>
 						<arg>java.security.jgss/sun.security.jgss=ALL-UNNAMED</arg>
 						<arg>--add-exports</arg>
